--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 8081
-DB_URI = mongodb://localhost:27017/mevn_full_stack
+DB_URI = mongodb+srv://root:root@mevn.j1zt1.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
